--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,8 +11,8 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.secrets.aws[:access_key_id] %>
   secret_access_key: <%= Rails.application.secrets.aws[:secret_access_key] %>
-  bucket: <%= Rails.application.secrets.aws[:bucket] %>
-  region: <%= Rails.application.secrets.aws[:region] %>
+  bucket: e-dalasa
+  region: us-east-2
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
