--- a/example.env
+++ b/example.env
@@ -131,3 +131,6 @@ BOT_EVALUATOR_REPEAT_REJECTION_ALERT_THRESHOLD=4
 
 # Default is 5 MB
 MAX_UPLOAD_FILE_SIZE=5242880
+
+# A variable to configure the school for discord bot rake task
+SCHOOL_ID_FOR_DISCORD_BOT=1
