--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,6 @@
 Dockerfile
+Dockerfile.evaluation
+docker-compose.yml
 .dockerignore
 
 # Ignore anything vendored locally.
@@ -68,7 +70,7 @@ yarn-*.log*
 !.yarn/releases
 
 # Example files
-example.env
+# example.env
 
 # Docs
 CODE_OF_CONDUCT.md
